After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641345 - Cannot drag monitors to correct positions if one is portrait
Cannot drag monitors to correct positions if one is portrait
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
git master
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 645468 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-02-03 13:44 UTC by Richard Hughes
Modified: 2011-03-22 11:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot showing the problem (35.80 KB, image/png)
2011-02-03 15:14 UTC, Richard Hughes
Details

Description Richard Hughes 2011-02-03 13:44:45 UTC
I have two monitors. An internal panel and a external DVI display. The internal panel is a normal widescreen notebook screen. The external DVI display is setup as portrait, i.e. "left" in the Display panel and is physically positioned to the left of my laptop.

If you do this, you can't drag the external monitor to the left side of the internal panel on the monitor setup screen. It looks like the constraint code is dealing with the display as landscape, and the rendering code with the display as portrait.

To reproduce:

1. setup a second monitor
2. switch the second monitor to "Left" in the GUI so it's portrait
3. try to drag the second monitor to the left side of the internal panel on the drawing canvas.
4. its.... sticking.... in... the... wrong... place... :-)

This is a regression from 2.32. Thanks.
Comment 1 Richard Hughes 2011-02-03 15:14:11 UTC
Created attachment 179994 [details]
Screenshot showing the problem
Comment 2 Matthias Clasen 2011-02-10 00:21:54 UTC
I find it confusing that there is at least 20 calls to gnome_rr_output_info_get_geometry() in xrandr-capplet.c, but only a single call to get_geometry(), which applies the orientation...
Comment 3 Bastien Nocera 2011-03-18 15:47:19 UTC
This should fix it, reopen if not.

commit 189a24c280678c8b56ec6d3ee154ba93a7567918
Author: Alexander Larsson <alexl@redhat.com>
Date:   Fri Mar 18 16:37:22 2011 +0100

    Fix dragging rotated monitors
    
    Need to take rotation into account when handling the snapping.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=641345
Comment 4 Bastien Nocera 2011-03-22 11:18:11 UTC
*** Bug 645468 has been marked as a duplicate of this bug. ***