Fix dragging rotated monitors

Need to take rotation into account when handling the snapping.

https://bugzilla.gnome.org/show_bug.cgi?id=641345